--- a/configtx.yaml
+++ b/configtx.yaml
@@ -173,18 +173,22 @@ Channel: &ChannelDefaults
 
 Profiles:
 
-    TwoOrgsChannel:
-        Consortium: SampleConsortium
-        <<: *ChannelDefaults
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *Org1
-                - *Org2
-            Capabilities:
-                <<: *ApplicationCapabilities
 
-    OneOrgChannel:
+    OrgsOrdererGenesis:
+        <<: *ChannelDefaults
+        Orderer:
+            <<: *OrdererDefaults
+            Organizations:
+                - *OrdererOrg
+            Capabilities:
+                <<: *OrdererCapabilities
+        Consortiums:
+            SampleConsortium:
+                Organizations:
+                    - *Org1
+                    - *Org2
+
+    OrgsChannelAssets:
         Consortium: SampleConsortium
         <<: *ChannelDefaults
         Application:
