--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -95,6 +95,7 @@ services:
     tty: true
     stdin_open: true
     environment:
+      - GODEBUG=netdns=go
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       #- FABRIC_LOGGING_SPEC=DEBUG
