--- a/crypto-config.yaml
+++ b/crypto-config.yaml
@@ -3,194 +3,24 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
----
-Organizations:
+OrdererOrgs:
+  - Name: Orderer
+    Domain: cpu.com
+    Specs:
+      - Hostname: orderer1
 
-    - &OrdererOrg
-
-        Name: OrdererOrg
-
-        ID: OrdererMSP
-
-        MSPDir: crypto-config/ordererOrganizations/cpu.com/msp
-
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('OrdererMSP.member')"
-            Writers:
-                Type: Signature
-                Rule: "OR('OrdererMSP.member')"
-            Admins:
-                Type: Signature
-                Rule: "OR('OrdererMSP.admin')"
-
-    - &Org1
-
-        Name: Org1MSP
-
-        ID: Org1MSP
-
-        MSPDir: crypto-config/peerOrganizations/org1.huawei.com/msp
-
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org1MSP.admin', 'Org1MSP.peer', 'Org1MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org1MSP.admin', 'Org1MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org1MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org1MSP.peer')"
-
-        AnchorPeers:
-            - Host: peer0.org1.huawei.com
-              Port: 7051
-
-    - &Org2
-
-        Name: Org2MSP
-
-
-        ID: Org2MSP
-
-        MSPDir: crypto-config/peerOrganizations/org2.xiaomi.com/msp
-
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org2MSP.peer')"
-
-        AnchorPeers:
-            - Host: peer0.org2.xiaomi.com
-              Port: 9051
-
-Capabilities:
-
-    Channel: &ChannelCapabilities
-
-        V2_0: true
-
-    Orderer: &OrdererCapabilities
-
-        V2_0: true
-
-    Application: &ApplicationCapabilities
-
-        V2_0: true
-
-
-Application: &ApplicationDefaults
-
-    Organizations:
-
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-        LifecycleEndorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
-        Endorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
-
-    Capabilities:
-        <<: *ApplicationCapabilities
-
-Orderer: &OrdererDefaults
-
-    OrdererType: solo
-
-    Addresses:
-        - orderer1.cpu.com:7050
-
-    BatchTimeout: 1s
-
-    BatchSize:
-
-        MaxMessageCount: 100
-
-        AbsoluteMaxBytes: 20 MB
-
-        PreferredMaxBytes: 512 KB
-
-    Organizations:
-
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-
-        BlockValidation:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-
-Channel: &ChannelDefaults
-
-    Policies:
-
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-
-
-    Capabilities:
-        <<: *ChannelCapabilities
-
-Profiles:
-
-    TwoOrgsChannel:
-        Consortium: SampleConsortium
-        <<: *ChannelDefaults
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *Org1
-                - *Org2
-            Capabilities:
-                <<: *ApplicationCapabilities
-
-    OneOrgChannel:
-        Consortium: SampleConsortium
-        <<: *ChannelDefaults
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *Org1
-                - *Org2
-            Capabilities:
-                <<: *ApplicationCapabilities
+PeerOrgs:
+  - Name: Org1
+    Domain: org1.huawei.com
+    EnableNodeOUs: true
+    Template:
+      Count: 2
+    Users:
+      Count: 1
+  - Name: Org2
+    Domain: org2.xiaomi.com
+    EnableNodeOUs: true
+    Template:
+      Count: 2
+    Users:
+      Count: 1
