--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -7,16 +7,16 @@ version: '2'
 
 services:
 
-  orderer1.cpu.com:
-    container_name: orderer1.cpu.com
+  orderer.cpu.com:
+    container_name: orderer.cpu.com
     extends:
       file: peer-base.yaml
       service: orderer-base
     volumes:
         - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer1.cpu.com/msp:/var/hyperledger/orderer/msp
-        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer1.cpu.com/tls/:/var/hyperledger/orderer/tls
-        - orderer1.cpu.com:/var/hyperledger/production/orderer
+        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer.cpu.com/msp:/var/hyperledger/orderer/msp
+        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer.cpu.com/tls/:/var/hyperledger/orderer/tls
+        - orderer.cpu.com:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
 
