--- a/base/peer-base.yaml
+++ b/base/peer-base.yaml
@@ -14,7 +14,7 @@ services:
       # the following setting starts chaincode containers on the same
       # bridge network as the peers
       # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_ydqy
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=demo_ydqy
       - FABRIC_LOGGING_SPEC=INFO
       #- FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_TLS_ENABLED=true
