--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -15,7 +15,7 @@ services:
     volumes:
         - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
         - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer.cpu.com/msp:/var/hyperledger/orderer/msp
-        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer.cpu.com/tls/:/var/hyperledger/orderer/tls
+        - ../crypto-config/ordererOrganizations/cpu.com/orderers/orderer.cpu.com/tls:/var/hyperledger/orderer/tls
         - orderer.cpu.com:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
