--- a/crypto-config.yaml
+++ b/crypto-config.yaml
@@ -7,11 +7,7 @@ OrdererOrgs:
   - Name: Orderer
     Domain: cpu.com
     Specs:
-      - Hostname: orderer1
-      - Hostname: orderer2
-      - Hostname: orderer3
-      - Hostname: orderer4
-      - Hostname: orderer5
+      - Hostname: orderer
 
 PeerOrgs:
   - Name: Org1
